[tool.poetry]
name = "Zodiac"
version = "0.1.0"
description = ""
authors = ["Tom Marks <thomas.o.marks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.14.0"
mistune = "^0.8.4"
PySide2 = "^5.14.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"

[tool.poetry.scripts]
zodiac = 'zodiac:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
